// Code generated by go2proto. DO NOT EDIT.
syntax = "proto3";

option go_package = "github.com/beam-cloud/beta9/proto";
import "google/protobuf/timestamp.proto";


message CheckpointState {
  string stub_id = 1;
  string container_id = 2;
  string status = 3;
  string remote_key = 4;
}

message ConcurrencyLimit {
  uint32 id = 1;
  string external_id = 2;
  uint32 gpu_limit = 3;
  uint32 cpu_millicore_limit = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message ContainerAlreadyScheduledError {
  string msg = 1;
}

message ContainerState {
  string container_id = 1;
  string stub_id = 2;
  string status = 3;
  int64 scheduled_at = 4;
  string workspace_id = 5;
  string gpu = 6;
  uint32 gpu_count = 7;
  int64 cpu = 8;
  int64 memory = 9;
}

message Object {
  uint32 id = 1;
  string external_id = 2;
  string hash = 3;
  int64 size = 4;
  uint32 workspace_id = 5;
  google.protobuf.Timestamp created_at = 6;
}

message Stub {
  uint32 id = 1;
  string external_id = 2;
  string name = 3;
  string type = 4;
  string config = 5;
  uint32 config_version = 6;
  uint32 object_id = 7;
  uint32 workspace_id = 8;
  google.protobuf.Timestamp created_at = 9;
  google.protobuf.Timestamp updated_at = 10;
}

message StubWithRelated {
  Stub stub = 1;
  Workspace workspace = 2;
  Object object = 3;
}

message Workspace {
  uint32 id = 1;
  string external_id = 2;
  string name = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
  string signing_key = 6;
  bool volume_cache_enabled = 7;
  bool multi_gpu_enabled = 8;
  uint32 concurrency_limit_id = 9;
  ConcurrencyLimit concurrency_limit = 10;
}

